pico runtime services - tests partially complete